--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p>This lit site uses the <a href="http://www.farmsense.net/api/">Farmsense API</a> to display some dope moon data.</p>
       <a href="http://www.farmsense.net/api/"><img src="farmsense.svg" alt="Farmsense Logo" width="100px"></a>
       <br>
-      <p>A srsly lit API demo by Bill Doerrfeld. View how lit the code is on Github.</p>
+      <p>A srsly lit API demo by Bill Doerrfeld. View how lit the code is on <a href="https://github.com/doerrfeldbill/phase">Github</a>.</p>
       <p><a href="http://www.doerrfeld.io">DOERRFELD.IO</a></p>
     </div>
 </div>
